--- a/yt.css
+++ b/yt.css
@@ -1,6 +1,5 @@
 .sundar{
-    width: 300px;
-    display: block;
+    width: 100%;
 }
 
 .search-bar{
@@ -15,10 +14,6 @@
 }
 
 .video-preview{
-    width: 300px;
-    display: inline-block;
-    vertical-align: top;
-    margin-right:15px;
 }
 
 .channel-pic{
@@ -28,9 +23,7 @@
 }
 
 .video-info{
-    display: inline-block;
-    width: 200px;
-}
+ }
 
 .profile-pic{
     width: 40px;
@@ -52,5 +45,17 @@ p{
 .video-author, .video-stats{
     font-size: 12px;
     color: rgb(96, 96, 96);
+}
+
+.video-info-grid{
+    display: grid;
+    grid-template-columns: 50px 1fr;
+}
+
+.video-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap:15px;
+    row-gap:15px;
 }
 
