--- a/header.css
+++ b/header.css
@@ -6,19 +6,100 @@
 }
 
 .left-section{
-    background-color: lightblue;
-    width:150px;
+    display: flex;
+    align-items: center;
 }
 
 .middle-section{
-    background-color: lightpink;
     flex: 1;
     margin-left:70px;
     margin-right: 35px;
     max-width: 500px;
+    display: flex;
+    align-items: center;
 }
 
 .right-section{
-    background-color: lightblue;
-    width:200px;
+    width:180px;
+    margin-right: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-shrink: 0;
+}
+
+.hamburger-logo{
+    height: 24px;
+    margin-left: 24px;
+    margin-right: 20px;
+}
+
+.ytube-logo{
+    height: 20px;
+}
+
+.search-btn{
+    height: 40px;
+    width: 66px;
+    background-color: rgb(240, 240, 240);
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(192, 192, 192);
+    margin-left: -1px;
+    margin-right: 10px;
+}
+
+
+.voice-search-btn{
+    height: 40px;
+    width:40px;
+    border-radius: 20px;
+    border:none;
+    background-color: rgb(245, 245, 245);
+}
+
+.voice-search-icon{
+    height: 25px;
+    margin-top: 4px;
+}
+
+.search-bar{
+    flex:1;
+    height: 36px;
+    padding-left: 10px;
+    font-size: 16px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(192, 192, 192);
+    border-radius: 2px;
+    box-shadow: inset 1px 2px 5px rgba(0, 0,0, 0.15);
+    width: 0;
+}
+
+.search-bar::placeholder{
+    font-family: Roboto;
+    font-size: 18px;
+}
+
+.search-icon{
+    height: 25px;
+    margin-top: 4px;
+}
+
+
+.upload-icon{
+    height: 25px;
+}
+
+.ytube-icon{
+    height: 25px;
+}
+.noti-icon{
+    height: 25px;
+}
+
+
+.pro-icon{
+    height: 32px;
+    border-radius: 16px;
 }
